welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: Boolean.type does not take parameters
	def posFin() = Boolean {
                               ^